# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ncore_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//tools/data_converter/pai:__pkg__"])

PAI_DL_DEPS = [
    requirement("click"),
    requirement("pandas"),
    requirement("pyarrow"),
    requirement("remotezip"),
    requirement("requests"),
    requirement("rich"),
]

py_library(
    name = "pylib_pai_remote",
    srcs = [
        "config.py",
        "downloader.py",
        "index.py",
        "remote.py",
        "streaming.py",
    ],
    deps = PAI_DL_DEPS,
)

py_binary(
    name = "pai-clip-dl",
    srcs = [
        "cli.py",
    ],
    main = "cli.py",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/data_converter/pai/pai_remote:pylib_pai_remote",
    ] + PAI_DL_DEPS,
)
