[project]
name = "pai-clip-dl"
version = "0.1.0"
description = "Download and stream clip data from the NVIDIA PhysicalAI-Autonomous-Vehicles HuggingFace dataset"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.20.0",
    "remotezip>=0.12.0",
    "requests>=2.31.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
pai-clip-dl = "pai_remote.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
